--- a/movies_recommendation_system.ipynb
+++ b/movies_recommendation_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "'[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "'culture clash, future, space war, space colony, society, space travel, futuristic, romance, space, alien, tribe, alien planet, cgi, marine, soldier, battle, love affair, anti war, power relations, mind and soul, 3d'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
        "4    Taylor Kitsch, Lynn Collins, Samantha Morton     Andrew Stanton  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "4    TaylorKitsch,LynnCollins,SamanthaMorton     AndrewStanton  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "'In the 22nd century, a paraplegic Marine is dispatched to the moon Pandora on a unique mission, but becomes torn between following orders and protecting an alien civilization.Action,Adventure,Fantasy,ScienceFictioncultureclash,future,spacewar,spacecolony,society,spacetravel,futuristic,romance,space,alien,tribe,alienplanet,cgi,marine,soldier,battle,loveaffair,antiwar,powerrelations,mindandsoul,3dSamWorthington,ZoeSaldana,SigourneyWeaverJamesCameron'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1114,31 +1114,31 @@
        "      <th>0</th>\n",
        "      <td>19995</td>\n",
        "      <td>Avatar</td>\n",
-       "      <td>in the 22nd century, a paraplegic marine is di...</td>\n",
+       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>285</td>\n",
        "      <td>Pirates of the Caribbean: At World's End</td>\n",
-       "      <td>captain barbossa, long believed to be dead, ha...</td>\n",
+       "      <td>Captain Barbossa, long believed to be dead, ha...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>206647</td>\n",
        "      <td>Spectre</td>\n",
-       "      <td>a cryptic message from bond’s past sends him o...</td>\n",
+       "      <td>A cryptic message from Bond’s past sends him o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>49026</td>\n",
        "      <td>The Dark Knight Rises</td>\n",
-       "      <td>following the death of district attorney harve...</td>\n",
+       "      <td>Following the death of District Attorney Harve...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>49529</td>\n",
        "      <td>John Carter</td>\n",
-       "      <td>john carter is a war-weary, former military ca...</td>\n",
+       "      <td>John Carter is a war-weary, former military ca...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1150,31 +1150,31 @@
        "      <th>4804</th>\n",
        "      <td>9367</td>\n",
        "      <td>El Mariachi</td>\n",
-       "      <td>el mariachi just wants to play his guitar and ...</td>\n",
+       "      <td>El Mariachi just wants to play his guitar and ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4805</th>\n",
        "      <td>72766</td>\n",
        "      <td>Newlyweds</td>\n",
-       "      <td>a newlywed couple's honeymoon is upended by th...</td>\n",
+       "      <td>A newlywed couple's honeymoon is upended by th...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4806</th>\n",
        "      <td>231617</td>\n",
        "      <td>Signed, Sealed, Delivered</td>\n",
-       "      <td>\"signed, sealed, delivered\" introduces a dedic...</td>\n",
+       "      <td>\"Signed, Sealed, Delivered\" introduces a dedic...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4807</th>\n",
        "      <td>126186</td>\n",
        "      <td>Shanghai Calling</td>\n",
-       "      <td>when ambitious new york attorney sam is sent t...</td>\n",
+       "      <td>When ambitious New York attorney Sam is sent t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4808</th>\n",
        "      <td>25975</td>\n",
        "      <td>My Date with Drew</td>\n",
-       "      <td>ever since the second grade when he first saw ...</td>\n",
+       "      <td>Ever since the second grade when he first saw ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1196,22 +1196,22 @@
        "4808     25975                         My Date with Drew   \n",
        "\n",
        "                                                   tags  \n",
-       "0     in the 22nd century, a paraplegic marine is di...  \n",
-       "1     captain barbossa, long believed to be dead, ha...  \n",
-       "2     a cryptic message from bond’s past sends him o...  \n",
-       "3     following the death of district attorney harve...  \n",
-       "4     john carter is a war-weary, former military ca...  \n",
+       "0     In the 22nd century, a paraplegic Marine is di...  \n",
+       "1     Captain Barbossa, long believed to be dead, ha...  \n",
+       "2     A cryptic message from Bond’s past sends him o...  \n",
+       "3     Following the death of District Attorney Harve...  \n",
+       "4     John Carter is a war-weary, former military ca...  \n",
        "...                                                 ...  \n",
-       "4804  el mariachi just wants to play his guitar and ...  \n",
-       "4805  a newlywed couple's honeymoon is upended by th...  \n",
-       "4806  \"signed, sealed, delivered\" introduces a dedic...  \n",
-       "4807  when ambitious new york attorney sam is sent t...  \n",
-       "4808  ever since the second grade when he first saw ...  \n",
+       "4804  El Mariachi just wants to play his guitar and ...  \n",
+       "4805  A newlywed couple's honeymoon is upended by th...  \n",
+       "4806  \"Signed, Sealed, Delivered\" introduces a dedic...  \n",
+       "4807  When ambitious New York attorney Sam is sent t...  \n",
+       "4808  Ever since the second grade when he first saw ...  \n",
        "\n",
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,17 +1254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.stem.porter import PorterStemmer\n",
+    "from nltk.stem import PorterStemmer\n",
     "ps = PorterStemmer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
        "array(['000', '007', '10', ..., 'zombies', 'zone', 'zoo'], dtype=object)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
        "       0.        ])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,28 +1405,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sherlock Holmes: A Game of Shadows\n",
-      "Young Sherlock Holmes\n",
-      "Die Hard: With a Vengeance\n",
-      "Highlander\n",
-      "Nighthawks\n"
+      "The Dark Knight\n",
+      "Batman & Robin\n",
+      "Batman\n",
+      "Batman\n",
+      "The Dark Knight Rises\n"
      ]
     }
    ],
    "source": [
-    "recommend('Sherlock Holmes')"
+    "recommend('Batman Begins')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,20 +1435,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(new_df, open('movies.pkl', 'wb'))"
+    "movie_file = open('movies.pkl', 'wb')\n",
+    "pickle.dump(new_df, movie_file)\n",
+    "movie_file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(similarity, open('similarity.pkl', 'wb'))"
+    "similarity_file = open('similarity.pkl', 'wb')\n",
+    "pickle.dump(similarity, similarity_file)\n",
+    "similarity_file.close()"
    ]
   },
   {
