20th commit Refactor loading of pickle files in app.py

--- a/movies_recommendation_system.ipynb
+++ b/movies_recommendation_system.ipynb
@@ -1258,13 +1258,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.stem import PorterStemmer\n",
-    "ps = PorterStemmer()"
+    "# from nltk.stem import PorterStemmer\n",
+    "# ps = PorterStemmer()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def stem_text(text):\n",
+    "#     \"\"\"\n",
+    "#     Stems the words in the input text.\n",
+    "    \n",
+    "#     Parameters:\n",
+    "#     text (str): The input text.\n",
+    "    \n",
+    "#     Returns:\n",
+    "#     str: The text with words stemmed.\n",
+    "#     \"\"\"\n",
+    "#     text = text.split()\n",
+    "#     text = [ps.stem(word) for word in text]\n",
+    "#     return ' '.join(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import wordnet\n",
+    "lemma = wordnet.WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1310,7 @@
     "    str: The text with words stemmed.\n",
     "    \"\"\"\n",
     "    text = text.split()\n",
-    "    text = [ps.stem(word) for word in text]\n",
+    "    text = [lemma.lemmatize(word) for word in text]\n",
     "    return ' '.join(text)"
    ]
   },
@@ -1435,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
