--- a/movies_recommendation_system.ipynb
+++ b/movies_recommendation_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "'[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "'culture clash, future, space war, space colony, society, space travel, futuristic, romance, space, alien, tribe, alien planet, cgi, marine, soldier, battle, love affair, anti war, power relations, mind and soul, 3d'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
        "4    Taylor Kitsch, Lynn Collins, Samantha Morton     Andrew Stanton  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "4    TaylorKitsch,LynnCollins,SamanthaMorton     AndrewStanton  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "'In the 22nd century, a paraplegic Marine is dispatched to the moon Pandora on a unique mission, but becomes torn between following orders and protecting an alien civilization.Action,Adventure,Fantasy,ScienceFictioncultureclash,future,spacewar,spacecolony,society,spacetravel,futuristic,romance,space,alien,tribe,alienplanet,cgi,marine,soldier,battle,loveaffair,antiwar,powerrelations,mindandsoul,3dSamWorthington,ZoeSaldana,SigourneyWeaverJamesCameron'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1114,31 +1114,31 @@
        "      <th>0</th>\n",
        "      <td>19995</td>\n",
        "      <td>Avatar</td>\n",
-       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
+       "      <td>in the 22nd century, a paraplegic marine is di...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>285</td>\n",
        "      <td>Pirates of the Caribbean: At World's End</td>\n",
-       "      <td>Captain Barbossa, long believed to be dead, ha...</td>\n",
+       "      <td>captain barbossa, long believed to be dead, ha...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>206647</td>\n",
        "      <td>Spectre</td>\n",
-       "      <td>A cryptic message from Bond’s past sends him o...</td>\n",
+       "      <td>a cryptic message from bond’s past sends him o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>49026</td>\n",
        "      <td>The Dark Knight Rises</td>\n",
-       "      <td>Following the death of District Attorney Harve...</td>\n",
+       "      <td>following the death of district attorney harve...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>49529</td>\n",
        "      <td>John Carter</td>\n",
-       "      <td>John Carter is a war-weary, former military ca...</td>\n",
+       "      <td>john carter is a war-weary, former military ca...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1150,31 +1150,31 @@
        "      <th>4804</th>\n",
        "      <td>9367</td>\n",
        "      <td>El Mariachi</td>\n",
-       "      <td>El Mariachi just wants to play his guitar and ...</td>\n",
+       "      <td>el mariachi just wants to play his guitar and ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4805</th>\n",
        "      <td>72766</td>\n",
        "      <td>Newlyweds</td>\n",
-       "      <td>A newlywed couple's honeymoon is upended by th...</td>\n",
+       "      <td>a newlywed couple's honeymoon is upended by th...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4806</th>\n",
        "      <td>231617</td>\n",
        "      <td>Signed, Sealed, Delivered</td>\n",
-       "      <td>\"Signed, Sealed, Delivered\" introduces a dedic...</td>\n",
+       "      <td>\"signed, sealed, delivered\" introduces a dedic...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4807</th>\n",
        "      <td>126186</td>\n",
        "      <td>Shanghai Calling</td>\n",
-       "      <td>When ambitious New York attorney Sam is sent t...</td>\n",
+       "      <td>when ambitious new york attorney sam is sent t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4808</th>\n",
        "      <td>25975</td>\n",
        "      <td>My Date with Drew</td>\n",
-       "      <td>Ever since the second grade when he first saw ...</td>\n",
+       "      <td>ever since the second grade when he first saw ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1196,22 +1196,22 @@
        "4808     25975                         My Date with Drew   \n",
        "\n",
        "                                                   tags  \n",
-       "0     In the 22nd century, a paraplegic Marine is di...  \n",
-       "1     Captain Barbossa, long believed to be dead, ha...  \n",
-       "2     A cryptic message from Bond’s past sends him o...  \n",
-       "3     Following the death of District Attorney Harve...  \n",
-       "4     John Carter is a war-weary, former military ca...  \n",
+       "0     in the 22nd century, a paraplegic marine is di...  \n",
+       "1     captain barbossa, long believed to be dead, ha...  \n",
+       "2     a cryptic message from bond’s past sends him o...  \n",
+       "3     following the death of district attorney harve...  \n",
+       "4     john carter is a war-weary, former military ca...  \n",
        "...                                                 ...  \n",
-       "4804  El Mariachi just wants to play his guitar and ...  \n",
-       "4805  A newlywed couple's honeymoon is upended by th...  \n",
-       "4806  \"Signed, Sealed, Delivered\" introduces a dedic...  \n",
-       "4807  When ambitious New York attorney Sam is sent t...  \n",
-       "4808  Ever since the second grade when he first saw ...  \n",
+       "4804  el mariachi just wants to play his guitar and ...  \n",
+       "4805  a newlywed couple's honeymoon is upended by th...  \n",
+       "4806  \"signed, sealed, delivered\" introduces a dedic...  \n",
+       "4807  when ambitious new york attorney sam is sent t...  \n",
+       "4808  ever since the second grade when he first saw ...  \n",
        "\n",
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,48 +1254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from nltk.stem import PorterStemmer\n",
-    "# ps = PorterStemmer()"
+    "from nltk import PorterStemmer\n",
+    "ps = PorterStemmer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def stem_text(text):\n",
-    "#     \"\"\"\n",
-    "#     Stems the words in the input text.\n",
-    "    \n",
-    "#     Parameters:\n",
-    "#     text (str): The input text.\n",
-    "    \n",
-    "#     Returns:\n",
-    "#     str: The text with words stemmed.\n",
-    "#     \"\"\"\n",
-    "#     text = text.split()\n",
-    "#     text = [ps.stem(word) for word in text]\n",
-    "#     return ' '.join(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import wordnet\n",
-    "lemma = wordnet.WordNetLemmatizer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,13 +1279,13 @@
     "    str: The text with words stemmed.\n",
     "    \"\"\"\n",
     "    text = text.split()\n",
-    "    text = [lemma.lemmatize(word) for word in text]\n",
+    "    text = [ps.stem(word) for word in text]\n",
     "    return ' '.join(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1329,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1349,7 @@
        "array(['000', '007', '10', ..., 'zombies', 'zone', 'zoo'], dtype=object)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1380,7 @@
        "       0.        ])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
