--- a/movies_recommendation_system.ipynb
+++ b/movies_recommendation_system.ipynb
@@ -1254,17 +1254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk import PorterStemmer\n",
-    "ps = PorterStemmer()"
+    "from nltk import stem\n",
+    "ps = stem.PorterStemmer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
        "array(['000', '007', '10', ..., 'zombies', 'zone', 'zoo'], dtype=object)"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
        "       0.        ])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
